# ring-camera-metrics-tracker

./: .gitignore  REQUIREMENTS.md  compose.yaml
consumer_service/: Dockerfile  consumer_service.go  go.mod
consumer_service/cmd/consumer_runner/: main.go
ingest_service/: Dockerfile  main.py  pyproject.toml  ringclient.py
migrations/: V1__InitializeDatabase.sql
